--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,163 @@
-.App {
+* {
+  box-sizing: border-box;
+}
+
+a {
+  font-weight: 500;
+  color: #646cff;
+  text-decoration: inherit;
+}
+a:hover {
+  color: #535bf2;
+}
+
+body {
+  margin: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: black;
+}
+
+h1 {
+  font-size: 3.2em;
+  line-height: 1.1;
+}
+
+button {
+  border-radius: 8px;
+  border: 5px solid transparent;
+  padding: 0.6em 1.2em;
+  font-size: 1em;
+  font-weight: 500;
+  font-family: inherit;
+  background-color: #1a1a1a;
+  cursor: pointer;
+  transition: border-color 0.25s;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
+}
+
+button:hover {
+  border-color: #646cff;
+}
+button:focus,
+button:focus-visible {
+  outline: 4px auto -webkit-focus-ring-color;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+}
+
+* {
+  background-image: url("../public/images/backdrop.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+.header {
+  font-size: 55px;
+  font-family: "Hey November", sans-serif;
+  color: #0987f4;
+  padding: 25px;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.topButton,
+.footer,
+.card,
+.bottomButton,
+.resetButton {
+  font-family: "Cascadia Code", sans-serif;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.card {
+  margin: 25px;
+  padding: 20px;
+  font-size: 20px;
+  border-width: 2px;
+  border-style: solid;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.footer {
+  background-position: bottom center;
+  color: white;
+  margin: 25px;
+  font-size: 20px;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  text-align: center;
+}
+
+.footer a {
+  color: gold;
+  text-decoration: none;
+}
+
+.footer a:hover {
+  color: #9086e7;
+}
+
+a,
+.footer {
+  background-image: none;
+}
+
+.question-card-container {
+  background-color: transparent;
+  background-image: none;
+  background-repeat: no-repeat;
+}
+
+#question-card > * {
+  background-image: none;
+  background-color: transparent;
+}
+
+#question-card *,
+.answer-card * {
+  background-image: none;
+}
+
+#question-card {
+  background-position: top left;
+  background-color: transparent;
+  color: white;
+  border-color: silver;
+  background-image: url("../public/images/day-winter-backdrop.png");
+}
+
+#answer-card {
+  background-color: transparent;
+  border-color: silver;
+  background-image: url("../public/images/day.png");
+}
+
+#answer-card * {
+  color: white;
+  background-image: none;
+}
+
+#triviaButton, #bottomButton, #resetButton {
+  display: inline-block;
+  padding: 20px;
+  margin: 20px;
+  font-size: 20px;
+  border-width: 2px;
+}
+
+.button-container {
   display: flex;
-  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-repeat: no-repeat;
+}
+
+#resetButton {
+  background-image: url("../public/images/winter-backdrop.png")
+}
+
+.revealAnswerContainer {
+  display: flex;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  background-image: none;
 }
